# Sourcetrail-test

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AUTHORS.txt  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  COATI_SOFTWARE_README.md  DOCUMENTATION.md  README.md  Sourcetrail_test.runsettings  run-clang-tidy-fix.sh  vcpkg-configuration.json  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml  cmake-win-platform.yml  mainworkflow.yml
archive/: encodeDecodeUtf8.cpp  splitGraphemes.cpp
backup/: upperLowerCase.cpp
cmake/: Sourcetrail.cmake  language_packages.h.in  licenses.cmake  licenses.h.in  productVersion.h.in  targetOptions.cmake  version.cmake
docs/technical_notes/control_flow_graph-CFG/: readme.md  test.cc
docs/technical_notes/cplusplus-ast/: Clang-AST.md
docs/technical_notes/java-ast/: Eclipse-JDT-AST.md
java_indexer/: .project  CMakeLists.txt  java-indexer.launch  pom.xml
project/: .gitignore  README.md  Sourcetrail-Linux-System.srctrlprj  Sourcetrail-Linux-Vcpkg.srctrlprj  Sourcetrail-Windows-Vcpkg.srctrlprj
projects/: .gitignore  README.md  Sourcetrail-Linux-System.srctrlprj  Sourcetrail-Linux-Vcpkg-Directory.srctrlprj  Sourcetrail-Linux-Vcpkg.srctrlprj  Sourcetrail-Windows-Vcpkg-Directory.srctrlprj  Sourcetrail-Windows-Vcpkg.srctrlprj
script/: install-qt5-dependencies.sh  install-qt6-dependencies.sh  install.ubuntu.qt5.dependencies.sh
scripts/: _gdbinit  download_python_indexer.sh  enable_perf_kernel_parameters.sh  generate_coverage_report.sh  install-qt6-dependencies.sh
setup/: qt.conf
src/app/: CMakeLists.txt  Sourcetrail.rc  main.cpp
src/indexer/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/lib/app/: Application.cpp  Application.h  LanguagePackageManager.cpp
src/lib/component/: Component.cpp  Component.h  ComponentManager.cpp  ComponentManager.h  NetworkFactory.cpp  Tab.cpp  Tab.h  TabIds.cpp  TabIds.h
src/lib/data/: DefinitionKind.cpp  DefinitionKind.h  ErrorFilter.h  ErrorInfo.h  GroupType.cpp  GroupType.h  HierarchyCache.cpp  HierarchyCache.h  NodeKind.cpp  NodeKind.h  NodeType.cpp  NodeType.h  NodeTypeSet.cpp  NodeTypeSet.h  TaskCleanStorage.cpp  TaskFinishParsing.cpp  TaskInjectStorage.cpp  TaskMergeStorages.cpp
src/lib/project/: Project.cpp  Project.h  RefreshInfo.cpp  RefreshInfo.h  RefreshInfoGenerator.cpp  SourceGroup.cpp  SourceGroup.h  SourceGroupCustomCommand.cpp  SourceGroupFactory.cpp  SourceGroupFactoryModule.cpp  SourceGroupFactoryModuleCustom.cpp
src/lib/settings/: ApplicationSettings.cpp  ApplicationSettings.h  ApplicationSettingsPrefiller.cpp  ColorScheme.cpp  ColorScheme.h  LanguageType.cpp  LanguageType.h  ProjectSettings.cpp  ProjectSettings.h  Settings.cpp  ToolVersionData.cpp  ToolVersionData.h  ToolVersionSupport.cpp  ToolVersionSupport.h
src/lib/utility/: ApplicationArchitectureType.h  ConfigManager.cpp  ConfigManager.h  Id.cpp  Id.h  LowMemoryStringMap.h  OrderedCache.h  Os.cpp  Os.h  Platform.cpp  Platform.h  Property.h  ScopedFunctor.cpp  ScopedFunctor.h  SingleValueCache.h  Status.h  TimeStamp.cpp  Tree.h  UnorderedCache.h  Version.cpp  Version.h  tracing.cpp  tracing.h  types.h  utility.h  utilityEnum.h  utilityLibrary.h  utilityString.cpp  utilityString.h  utilityXml.cpp
src/lib_aidkit/: CMakeLists.txt  enum_class.hpp  shared_data.hpp
src/lib_aidkit/aidkit/: enum_class.cpp  enum_class.hpp  shared_data.cpp  shared_data.hpp
src/lib_aidkit/aidkit/qt/: Strings.cpp  Strings.hpp
src/lib_cxx/: CMakeLists.txt  LanguagePackageCxx.h
src/lib_cxx/project/: SourceGroupCxxCdb.cpp  SourceGroupCxxCdb.h  SourceGroupCxxCodeblocks.cpp  SourceGroupCxxEmpty.cpp  (+4 more)
src/lib_gui/: CMakeLists.txt
src/lib_java/: CMakeLists.txt  LanguagePackageJava.h
src/lib_java/data/indexer/: IndexerCommandJava.cpp  IndexerCommandJava.h  IndexerJava.h
src/lib_java/data/parser/java/: JavaEnvironment.cpp  JavaEnvironment.h  JavaEnvironmentFactory.cpp  JavaEnvironmentFactory.h  JavaParser.cpp  JavaParser.h
src/lib_java/project/: SourceGroupFactoryModuleJava.cpp  SourceGroupJava.cpp  SourceGroupJavaEmpty.cpp  SourceGroupJavaGradle.cpp  SourceGroupJavaMaven.cpp
src/lib_java/utility/: utilityGradle.cpp  utilityJava.cpp  utilityJava.h  utilityMaven.cpp  utilityMaven.h
src/lib_python/: CMakeLists.txt
src/lib_python/project/: SourceGroupFactoryModulePython.cpp  SourceGroupPythonEmpty.cpp
src/lib_utility/: CMakeLists.txt
src/lib_utility/utility/: TextCodec.cpp  TextCodec.h
src/resources/: CMakeLists.txt  QtResources.cpp  QtResources.h
src/test/: CMakeLists.txt  Catch2.cpp  Catch2.hpp  CommandlineTestSuite.cpp  ConfigManagerTestSuite.cpp  CxxIncludeProcessingTestSuite.cpp  CxxParserTestSuite.cpp  CxxTypeNameTestSuite.cpp  FileManagerTestSuite.cpp  FilePathFilterTestSuite.cpp  FilePathTestSuite.cpp  FileSystemTestSuite.cpp  GraphTestSuite.cpp  HierarchyCacheTestSuite.cpp  JavaIndexSampleProjectsTestSuite.cpp  JavaParserTestSuite.cpp  LogManagerTestSuite.cpp  LowMemoryStringMapTestSuite.cpp  MatrixBaseTestSuite.cpp  MatrixDynamicBaseTestSuite.cpp  MessageQueueTestSuite.cpp  NetworkProtocolHelperTestSuite.cpp  PlatformTestSuite.cpp  PythonIndexerTestSuite.cpp  QtActionsTestSuite.cpp  QtResourcesTestSuite.cpp  RefreshInfoGeneratorTestSuite.cpp  SearchIndexTestSuite.cpp  SettingsMigratorTestSuite.cpp  SettingsTestSuite.cpp  SharedMemoryTestSuite.cpp  Snippet.cpp  SourceGroupTestSuite.cpp  SourceLocationCollectionTestSuite.cpp  SqliteBookmarkStorageTestSuite.cpp  SqliteIndexStorageTestSuite.cpp  StorageTestSuite.cpp  TaskSchedulerTestSuite.cpp  TextAccessTestSuite.cpp  TextCodecTestSuite.cpp  (+8 more)
src/test/helper/: TestFileRegister.cpp  TestFileRegister.h  TestStorage.cpp  TestStorage.h
src/test_aidkit/: CMakeLists.txt  enum_class_test.cpp  shared_data_test.cpp
src/test_aidkit/qt/: StringsTest.cpp
unused_coati_software_files/: AUTHORS.txt
unused_coati_software_files/cmake/: version.cmake
vcpkg-custom-triplets/: custom-x64-dynamic-md.cmake  custom-x64-static-md.cmake
vcpkg-custom-tripplets/: custom-x64-linux-static-md.cmake  custom-x64-windows-static-md.cmake
(+845 files in other folders)
